change 读经 page to 追求

--- a/app/src/i18n/locales/zh-Hant.json
+++ b/app/src/i18n/locales/zh-Hant.json
@@ -39,7 +39,7 @@
   },
   "tab": {
     "meeting": "線上聚會",
-    "bible": "讀經",
+    "pursue": "追求",
     "announcement": "通知",
     "profile": "我的"
   },
