--- a/app/src/i18n/locales/zh.json
+++ b/app/src/i18n/locales/zh.json
@@ -39,7 +39,7 @@
   },
   "tab": {
     "meeting": "线上聚会",
-    "bible": "读经",
+    "pursue": "追求",
     "announcement": "通知",
     "profile": "我的"
   },
