start to work on attendance function

--- a/app/src/i18n/locales/zh-Hant.json
+++ b/app/src/i18n/locales/zh-Hant.json
@@ -114,5 +114,36 @@
     "codeSentMessage": "驗證碼已發送到您的手機，請在5分鐘內輸入。",
     "helpText": "如果您無法收到驗證碼，請聯繫負責弟兄",
     "phoneNotWhitelisted": "該手機號未在邀請列表中，請聯繫負責弟兄"
+  },
+  "attendance": {
+    "title": "出席數據上傳",
+    "date": "日期",
+    "meetingType": "聚會類型",
+    "adultCount": "出席的成年人",
+    "youthChildCount": "出席的青少年或兒童",
+    "notes": "備註",
+    "submit": "提交",
+    "submitting": "提交中...",
+    "history": "歷史記錄",
+    "noRecords": "暫無記錄",
+    "submitSuccess": "提交成功",
+    "submitFailed": "提交失敗",
+    "deleteConfirm": "確定要刪除這條記錄嗎？",
+    "deleteSuccess": "刪除成功",
+    "deleteFailed": "刪除失敗",
+    "loadingRecords": "載入記錄中...",
+    "loadRecordsFailed": "載入記錄失敗",
+    "selectDate": "選擇日期",
+    "selectMeetingType": "選擇聚會類型",
+    "meetingType.table": "桌席聚會",
+    "meetingType.homeMeeting": "小排聚會",
+    "meetingType.prayer": "禱告聚會",
+    "invalidDate": "請選擇日期",
+    "invalidMeetingType": "請選擇聚會類型",
+    "invalidAdultCount": "請輸入成年人數量（0或正整數）",
+    "invalidYouthChildCount": "請輸入青少年或兒童數量（0或正整數）",
+    "futureDateNotAllowed": "不能選擇未來日期",
+    "editRecord": "編輯",
+    "deleteRecord": "刪除"
   }
 }
