--- a/app/src/i18n/locales/zh.json
+++ b/app/src/i18n/locales/zh.json
@@ -114,5 +114,36 @@
     "codeSentMessage": "验证码已发送到您的手机，请在5分钟内输入。",
     "helpText": "如果您无法收到验证码，请联系负责弟兄",
     "phoneNotWhitelisted": "该手机号未在邀请列表中，请联系负责弟兄"
+  },
+  "attendance": {
+    "title": "出席数据上传",
+    "date": "日期",
+    "meetingType": "聚会类型",
+    "adultCount": "出席的成年人",
+    "youthChildCount": "出席的青少年或儿童",
+    "notes": "备注",
+    "submit": "提交",
+    "submitting": "提交中...",
+    "history": "历史记录",
+    "noRecords": "暂无记录",
+    "submitSuccess": "提交成功",
+    "submitFailed": "提交失败",
+    "deleteConfirm": "确定要删除这条记录吗？",
+    "deleteSuccess": "删除成功",
+    "deleteFailed": "删除失败",
+    "loadingRecords": "加载记录中...",
+    "loadRecordsFailed": "加载记录失败",
+    "selectDate": "选择日期",
+    "selectMeetingType": "选择聚会类型",
+    "meetingType.table": "桌席聚会",
+    "meetingType.homeMeeting": "小排聚会",
+    "meetingType.prayer": "祷告聚会",
+    "invalidDate": "请选择日期",
+    "invalidMeetingType": "请选择聚会类型",
+    "invalidAdultCount": "请输入成年人数量（0或正整数）",
+    "invalidYouthChildCount": "请输入青少年或儿童数量（0或正整数）",
+    "futureDateNotAllowed": "不能选择未来日期",
+    "editRecord": "编辑",
+    "deleteRecord": "删除"
   }
 }
