--- a/app/src/i18n/locales/zh-Hant.json
+++ b/app/src/i18n/locales/zh-Hant.json
@@ -119,6 +119,15 @@
     "title": "出席數據上傳",
     "date": "日期",
     "meetingType": "聚會類型",
+    "scope": "統計層級",
+    "selectScope": "選擇統計層級",
+    "scope.full_congregation": "全會眾",
+    "scope.district": "大區",
+    "scope.small_group": "小排",
+    "scopeValue": "分區/小組",
+    "selectScopeValue": "選擇分區/小組",
+    "selectDistrict": "選擇大區",
+    "selectGroup": "選擇小排",
     "adultCount": "出席的成年人",
     "youthChildCount": "出席的青少年或兒童",
     "notes": "備註",
@@ -135,15 +144,18 @@
     "loadRecordsFailed": "載入記錄失敗",
     "selectDate": "選擇日期",
     "selectMeetingType": "選擇聚會類型",
-    "meetingType.table": "桌席聚會",
+    "meetingType.table": "主日聚會",
     "meetingType.homeMeeting": "小排聚會",
     "meetingType.prayer": "禱告聚會",
     "invalidDate": "請選擇日期",
     "invalidMeetingType": "請選擇聚會類型",
+    "invalidScope": "請選擇統計層級",
+    "invalidScopeValue": "請選擇分區/小組",
     "invalidAdultCount": "請輸入成年人數量（0或正整數）",
     "invalidYouthChildCount": "請輸入青少年或兒童數量（0或正整數）",
     "futureDateNotAllowed": "不能選擇未來日期",
     "editRecord": "編輯",
-    "deleteRecord": "刪除"
+    "deleteRecord": "刪除",
+    "loadingDistrictsGroups": "載入大區和小組列表..."
   }
 }
