--- a/app/src/i18n/locales/zh.json
+++ b/app/src/i18n/locales/zh.json
@@ -119,6 +119,15 @@
     "title": "出席数据上传",
     "date": "日期",
     "meetingType": "聚会类型",
+    "scope": "统计层级",
+    "selectScope": "选择统计层级",
+    "scope.full_congregation": "全会众",
+    "scope.district": "大区",
+    "scope.small_group": "小排",
+    "scopeValue": "分区/小组",
+    "selectScopeValue": "选择分区/小组",
+    "selectDistrict": "选择大区",
+    "selectGroup": "选择小排",
     "adultCount": "出席的成年人",
     "youthChildCount": "出席的青少年或儿童",
     "notes": "备注",
@@ -135,15 +144,18 @@
     "loadRecordsFailed": "加载记录失败",
     "selectDate": "选择日期",
     "selectMeetingType": "选择聚会类型",
-    "meetingType.table": "桌席聚会",
+    "meetingType.table": "主日聚会",
     "meetingType.homeMeeting": "小排聚会",
     "meetingType.prayer": "祷告聚会",
     "invalidDate": "请选择日期",
     "invalidMeetingType": "请选择聚会类型",
+    "invalidScope": "请选择统计层级",
+    "invalidScopeValue": "请选择分区/小组",
     "invalidAdultCount": "请输入成年人数量（0或正整数）",
     "invalidYouthChildCount": "请输入青少年或儿童数量（0或正整数）",
     "futureDateNotAllowed": "不能选择未来日期",
     "editRecord": "编辑",
-    "deleteRecord": "删除"
+    "deleteRecord": "删除",
+    "loadingDistrictsGroups": "加载大区和小组列表..."
   }
 }
