added usher role to the users table

--- a/app/src/i18n/locales/zh-Hant.json
+++ b/app/src/i18n/locales/zh-Hant.json
@@ -44,6 +44,7 @@
     "role.admin": "管理員",
     "role.leader": "組長",
     "role.member": "成員",
+    "role.usher": "招待",
     "logout": "登出",
     "loggingOut": "登出中...",
     "logoutConfirm": "確認登出",
