fixed more field names

--- a/app/src/i18n/locales/zh-Hant.json
+++ b/app/src/i18n/locales/zh-Hant.json
@@ -36,9 +36,9 @@
     "appSettings": "應用設定",
     "privacy": "隱私條款",
     "version": "版本號",
-    "phoneNumber": "手機號",
+    "phonenumber": "手機號",
     "name": "姓名",
-    "districtGroup": "大區/小組",
+    "district": "大區/小組",
     "role": "角色",
     "role.super_admin": "超級管理員",
     "role.admin": "管理員",
@@ -101,7 +101,7 @@
   "login": {
     "title": "登入",
     "subtitle": "請輸入您的手機號以繼續",
-    "phoneNumber": "手機號",
+    "phonenumber": "手機號",
     "phonePlaceholder": "(123) 456-7890",
     "sendCode": "發送驗證碼",
     "resendIn": "重新發送",
