--- a/app/src/i18n/locales/zh.json
+++ b/app/src/i18n/locales/zh.json
@@ -36,9 +36,9 @@
     "appSettings": "应用设置",
     "privacy": "隐私条款",
     "version": "版本号",
-    "phoneNumber": "手机号",
+    "phonenumber": "手机号",
     "name": "姓名",
-    "districtGroup": "大区/小组",
+    "district": "大区/小组",
     "role": "角色",
     "role.super_admin": "超级管理员",
     "role.admin": "管理员",
@@ -101,7 +101,7 @@
   "login": {
     "title": "登录",
     "subtitle": "请输入您的手机号以继续",
-    "phoneNumber": "手机号",
+    "phonenumber": "手机号",
     "phonePlaceholder": "(123) 456-7890",
     "sendCode": "发送验证码",
     "resendIn": "重新发送",
