--- a/app/src/i18n/locales/zh-Hant.json
+++ b/app/src/i18n/locales/zh-Hant.json
@@ -190,6 +190,7 @@
     "deleteFailed": "刪除失敗",
     "confirmDelete": "確定要刪除這條行程嗎？",
     "invalidDate": "日期無效",
-    "endDateBeforeStart": "結束日期不能早於開始日期"
+    "endDateBeforeStart": "結束日期不能早於開始日期",
+    "dateOverlap": "日期重疊"
   }
 }
