--- a/app/src/i18n/locales/zh.json
+++ b/app/src/i18n/locales/zh.json
@@ -190,6 +190,7 @@
     "deleteFailed": "删除失败",
     "confirmDelete": "确定要删除这条行程吗？",
     "invalidDate": "日期无效",
-    "endDateBeforeStart": "结束日期不能早于开始日期"
+    "endDateBeforeStart": "结束日期不能早于开始日期",
+    "dateOverlap": "日期重叠"
   }
 }
