--- a/app/src/i18n/locales/zh.json
+++ b/app/src/i18n/locales/zh.json
@@ -191,6 +191,13 @@
     "confirmDelete": "确定要删除这条行程吗？",
     "invalidDate": "日期无效",
     "endDateBeforeStart": "结束日期不能早于开始日期",
-    "dateOverlap": "日期重叠"
+    "dateOverlap": "日期重叠",
+    "availability": "是否在家",
+    "available": "在家",
+    "unavailable": "出城",
+    "selectDate": "请选择日期查看是否在家",
+    "loading": "加载中...",
+    "loadAvailabilityFailed": "加载是否在家失败",
+    "noDestination": "未指定目的地"
   }
 }
