--- a/app/src/i18n/locales/zh.json
+++ b/app/src/i18n/locales/zh.json
@@ -198,6 +198,14 @@
     "selectDate": "请选择日期查看是否在家",
     "loading": "加载中...",
     "loadAvailabilityFailed": "加载是否在家失败",
-    "noDestination": "未指定目的地"
+    "noDestination": "未指定目的地",
+    "weekdays": ["日", "一", "二", "三", "四", "五", "六"],
+    "unknownError": "未知错误",
+    "networkError": "网络错误",
+    "loadUsersFailed": "无法加载用户列表",
+    "provideDates": "请提供开始日期和结束日期",
+    "invalidDateFormat": "日期格式无效，请使用 YYYY-MM-DD 格式",
+    "invalidDateValue": "日期无效",
+    "overlapMessage": "日期与现有行程重叠。您已有行程：{{start}} 至 {{end}}"
   }
 }
