travel function update, hide expired travel plans

--- a/app/src/i18n/locales/zh-Hant.json
+++ b/app/src/i18n/locales/zh-Hant.json
@@ -192,12 +192,12 @@
     "invalidDate": "日期無效",
     "endDateBeforeStart": "結束日期不能早於開始日期",
     "dateOverlap": "日期重疊",
-    "availability": "是否在家",
+    "availability": "出城的人",
     "available": "在家",
     "unavailable": "出城",
-    "selectDate": "請選擇日期查看是否在家",
+    "selectDate": "請選擇日期查看出城情況",
     "loading": "載入中...",
-    "loadAvailabilityFailed": "載入是否在家失敗",
+    "loadAvailabilityFailed": "載入出城資訊失敗",
     "noDestination": "未指定目的地",
     "weekdays": ["日", "一", "二", "三", "四", "五", "六"],
     "unknownError": "未知錯誤",
