--- a/app/src/i18n/locales/zh.json
+++ b/app/src/i18n/locales/zh.json
@@ -192,12 +192,12 @@
     "invalidDate": "日期无效",
     "endDateBeforeStart": "结束日期不能早于开始日期",
     "dateOverlap": "日期重叠",
-    "availability": "是否在家",
+    "availability": "出城的人",
     "available": "在家",
     "unavailable": "出城",
-    "selectDate": "请选择日期查看是否在家",
+    "selectDate": "请选择日期查看出城情况",
     "loading": "加载中...",
-    "loadAvailabilityFailed": "加载是否在家失败",
+    "loadAvailabilityFailed": "加载出城信息失败",
     "noDestination": "未指定目的地",
     "weekdays": ["日", "一", "二", "三", "四", "五", "六"],
     "unknownError": "未知错误",
