--- a/app/src/i18n/locales/zh.json
+++ b/app/src/i18n/locales/zh.json
@@ -122,7 +122,7 @@
     "phoneNotWhitelisted": "该手机号未在邀请列表中，请联系负责弟兄"
   },
   "attendance": {
-    "title": "人数统计",
+    "title": "人数汇报",
     "date": "日期",
     "meetingType": "聚会类型",
     "scope": "统计层级",
