updated chart logic so that charts can display correctly by now

--- a/app/src/i18n/locales/zh-Hant.json
+++ b/app/src/i18n/locales/zh-Hant.json
@@ -127,7 +127,7 @@
     "meetingType": "聚會類型",
     "scope": "統計層級",
     "selectScope": "選擇統計層級",
-    "scope.full_congregation": "全會眾",
+    "scope.full_congregation": "中文區",
     "scope.district": "大區",
     "scope.small_group": "小排",
     "scopeValue": "分區/小組",
